<resources>
    <!-- TODO:
         PREFIX FORMAT
         ====================================
         for TextView : label_
         for Button : btn_
         for EditText Hint : hint_
         for All Errors : error_[cause]
         for Tab   : tab_
         for Action Bar Menu : action_
         for Menu : menu_
         for Sample : sample_
         for Activity Title : activity_title_
         for Message : message_
     -->

    <string name="app_name">Weedu</string>
    <string name="error">An Error occurred please try again in a while</string>
    <string name="please_wait">Please Wait &#8230;</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_search">Search</string>
    <string name="label_recommendations">Rekomendasi</string>
    <string name="label_all_products">Semua Produk</string>
    <string name="label_help_desk">Help Desk</string>
    <string name="label_more_products">more products</string>
    <string name="label_on_learning">Sedang Dipelajari</string>
    <string name="label_last_viewed">Terakhir Dilihat</string>
    <string name="menu_about">Tentang Weedu</string>
    <string name="activity_title_about">Tentang Weedu</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="activity_title_terms_and_conditions">Terms and Conditions</string>
    <string name="activity_title_faq">FAQ</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="activity_title_contact_us">Contact Us</string>
    <string name="sample_name">Suhainda Librado</string>
    <string name="sample_email">suhainda@edumail.co.id</string>
    <string name="label_balance">Saldo</string>
    <string name="label_point">Point</string>
    <string name="menu_edit_account">Edit Account</string>
    <string name="activity_title_edit_account">Edit Account</string>
    <string name="menu_change_password">Ganti Password</string>
    <string name="activity_title_change_password">Ganti Password</string>
    <string name="menu_topup_balance">Topup Saldo</string>
    <string name="activity_title_topup">Topup</string>
    <string name="label_topup">Topup</string>
    <string name="menu_redeem">Tukar Point</string>
    <string name="btn_logout">Logout</string>
    <string name="sample_source">Ruanglatihan</string>
    <string name="label_from">dari :</string>
    <string name="menu_chat">Chat</string>

    <string name="app_title_uppercase">WEEDU</string>
    <string name="app_tagline">Wonderful Education</string>
    <string name="label_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_or_connect_with">or connect with</string>
    <string name="label_register">Register</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="hint_current_email">Current Email (non edumail email)</string>
    <string name="label_toc">Saya telah membaca dan menyetujui syarat dan ketentuan yang berlaku</string>
    <string name="label_have_account_to_login">Already have account ? Login here</string>
    <string name="label_need_to_register">Don\'t have an account ? Register here</string>
    <string name="label_buat_edumail">Buat Edumail</string>
    <string name="label_email_suggestion">Saran email lain</string>
    <string name="label_ask_for_other_email">Minta saran lain</string>
    <string name="activity_title_confirmation">Confirmation</string>
    <string name="hint_write_your_message">Tulis pesan anda disini . . .</string>
    <string name="label_what_you_need">Apa yang anda Butuhkan?</string>
    <string name="btn_send">Kirim</string>
    <string name="sample_version">version 1.0.0</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="sample_faq">what is Weedu?</string>
    <string name="sample_topup_merchant">Credit Card</string>
    <string name="label_your_balance">Saldo Anda (T-Money)</string>
    <string name="sample_balance">IDR 100.000</string>
    <string name="sample_phone_number">087873112908</string>
    <string name="sample_dob">3 Maret 1994</string>
    <string name="activity_title_string">Inbox</string>
    <string name="tab_inbox">Inbox</string>
    <string name="tab_starred">Starred</string>
    <string name="tab_sent">Sent</string>
    <string name="activity_title_compose">Pesan Baru</string>
    <string name="hint_input_subject_here">Input subject here</string>
    <string name="hint_to_email">Kepada</string>
    <string name="hint_put_message_here">Put message here</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_ready">Got It, I\'m Ready!</string>
    <string name="label_on_progress">On Progress</string>
    <string name="label_completed">Completed</string>
    <string name="draft">Draft</string>
    <string name="trash">Trash</string>
    <string name="penulis">Penulis</string>
    <string name="penerbit">Penerbit</string>
    <string name="isbn">ISBN</string>
    <string name="bahasa">Bahasa</string>
    <string name="beli">Beli</string>
    <string name="message_terms_condition">You need to accept the terms and condition to complete the registration</string>
    <string name="label_email_edumail">\@edumail.id</string>
    <string name="tab_draft">Draft</string>
    <string name="tab_trash">Trash</string>
    <string name="label_author">Penulis</string>
    <string name="label_publisher">Penerbit</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_language">Bahasa</string>
    <string name="btn_view_in_qbaca">Lihat di QBaca</string>
    <string name="btn_buy">Beli</string>
    <string name="label_language_indonesia">Indonesia</string>
    <string name="btn_reply">Reply</string>
    <string name="btn_reply_all">Reply All</string>
    <string name="btn_forward">Forward</string>
    <string name="action_delete_mail">Hapus email</string>
    <string name="label_mail_recepient">Kepada</string>
    <string name="label_mail_cc">Cc</string>
    <string name="label_mail_Bcc">Bcc</string>
    <string name="label_mail_subject">Subject</string>
    <string name="hint_mail_message">Write your message here...</string>
    <string name="hint_default_email_address">hola@email.com</string>
    <string name="message_valid_email">Please input a valid email address</string>
    <string name="message_password_not_valid">Password must have at least an uppercase character, a number and 8 character length minimum</string>
    <string name="message_field_required">This Field cannot be empty</string>
    <string name="message_no_data">Tidak ada data saat ini</string>
    <string name="message_invalid_response">Respon tidak valid</string>
    <string name="message_unable_to_connect">Tidak dapat terhubung ke server</string>
    <string name="message_no_internet">Tidak ada internet</string>
    <string name="dialog_title_delete">Hapus</string>
    <string name="dialog_question_delete_mail">Apakah kamu ingin menghapus email ini ?</string>
    <string name="dialog_answer_yes">Ya</string>
    <string name="dialog_answer_yes_permanently">Ya secara permanen</string>
    <string name="dialog_answer_cancel">Batalkan</string>
    <string name="sample_saldo">Rp. 100.000</string>
    <string name="sample_point">0</string>
    <string name="edumail_domain">\@edumail.id</string>
    <string name="sample_title_ruangguru">Latihan Ujian Tryout SMA</string>
    <string name="sample_date">Sabtu, 11 Maret 2017</string>
    <string name="sample_hour">19.00</string>
    <string name="sample_progress">on progress</string>
    <string name="new_password_not_identical">New password and its confirmation are not identical</string>
    <string name="message_change_password_success">Password Successfully changed, please re-login to continue</string>
    <string name="sample_history_title">Video Tutorial Parsing JSON</string>
    <string name="btn_continue">Continue</string>
    <string name="action_reply">Reply</string>
    <string name="action_reply_all">Reply All</string>
    <string name="action_forward">Forward</string>
    <string name="label_status_uploading">Uploading...</string>
    <string name="label_status_ready_to_post">Ready to post</string>
    <string name="label_status_upload_failed">Upload failed</string>
    <string name="error_file_not_valid">File tidak valid</string>
    <string name="error_unable_to_pick_file">Tidak bisa melakukan memilih file saat ini. Silakan coba kembali</string>
    <string name="message_please_wait_while_uploading">Mohon tunggu hingga semua file attachment terupload</string>
    <string name="dialog_question_cancel_compose">Apakah kamu yakin ingin membatalkan proses ini?</string>
    <string name="dialog_title_confirmation">Konfirmasi</string>
    <string name="activity_title_reply">Reply</string>
    <string name="activity_title_reply_all">Reply All</string>
    <string name="activity_title_forward">Forward</string>
    <string name="activity_title_searchmail">Search Mail</string>
    <string name="hint_subject">Subject</string>
    <string name="message_contact_us_message_sent">Thank you, Your message has been sent</string>
</resources>
