<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_help_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_help_chat"
                    android:drawablePadding="18dp"
                    android:drawableStart="@drawable/ic_help_chat"
                    android:text="@string/menu_chat"
                    android:textColor="@color/textBlack"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/arah_kanan" />

            </LinearLayout>

            <View
                style="@style/horizontalDividerGray"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_help_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_help_contact_us"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/ic_help_contact_us"
                    android:text="@string/menu_contact_us"
                    android:textColor="@color/textBlack"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/arah_kanan" />

            </LinearLayout>

            <View
                style="@style/horizontalDividerGray"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:id="@+id/btn_help_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_help_faq"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_help_faq"
                    android:text="@string/menu_faq"
                    android:textColor="@color/textBlack"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/arah_kanan" />

            </LinearLayout>

            <View
                style="@style/horizontalDividerGray"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:id="@+id/btn_help_tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_help_terms_conditions"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/ic_help_terms_conditions"
                    android:text="@string/menu_terms_and_conditions"
                    android:textColor="@color/textBlack"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/arah_kanan" />

            </LinearLayout>

            <View
                style="@style/horizontalDividerGray"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="8dp"
            android:id="@+id/btn_help_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_help_about"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_help_about"
                    android:text="@string/menu_about"
                    android:textColor="@color/textBlack"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/arah_kanan" />

            </LinearLayout>

            <View
                style="@style/horizontalDividerGray"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>