...
                    style="@style/Base.TextAppearance.AppCompat.Medium.Bold"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/label_recommendations"
                    android:textColor="@color/textBlack" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/btn_help_desk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_helpdesk" />

                        <TextView
                            android:layout_width="wrap_content"
...
