...
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

